@@ -1,2 +1,0 @@
-	../panel-plugin/time-out.c \
-	../panel-plugin/xfce4-time-out-plugin.desktop.in.in
